--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
 .App {
   text-align: center;
 }
+
+.article-card {
+  padding: 10px;
+  background-color: lightgrey;
+  margin: 25px 0%;
+}
+
+a,
+a:active,
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: rgb(99, 99, 99);
+}
