--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@
   margin: 25px 0%;
 }
 
+.comment-card {
+  padding: 10px;
+  background-color: lightgrey;
+  margin: 25px 0%;
+  text-align: left;
+}
+
 a,
 a:active,
 a:visited {
