--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,37 @@
 body {
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+}
+
+header {
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+}
+
+.navigation-list-topics {
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  gap: 25px;
+  width: fit-content;
+  margin: 0px auto 50px auto;
+  padding: 0;
 }
 
 .article-card {
   padding: 10px;
   background-color: lightgrey;
-  margin: 10px 0%;
+  margin: 25px auto;
   border: 5px solid black;
   border-radius: 50px;
+  width: fit-content;
 }
 
 .comment-card {
   padding: 10px;
   background-color: lightgrey;
-  margin: 25px 0%;
+  margin: 25px auto;
   text-align: left;
   border: 5px solid black;
   border-radius: 10px;
@@ -45,6 +63,15 @@ h4,
 h5,
 h6 {
   text-transform: capitalize;
+}
+
+.votes-form {
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  width: fit-content;
+  gap: 1rem;
+  margin: auto;
 }
 
 .vote-button-increase,
