--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ header {
   grid-auto-flow: column;
 }
 
+main {
+  margin: 0px 5%;
+}
+
 .navigation-list-topics {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
@@ -16,7 +20,6 @@ header {
   gap: 25px;
   width: fit-content;
   margin: 0px auto 50px auto;
-  padding: 0;
 }
 
 .article-card {
@@ -49,6 +52,10 @@ a:visited {
 
 a:hover {
   color: rgb(99, 99, 99);
+}
+
+ul {
+  padding: 0;
 }
 
 li {
