--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  background-color: #f7ecde;
 }
 
 header {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
   grid-auto-flow: column;
-}
-
-main {
-  margin: 0px 5%;
 }
 
 .navigation-list-topics {
@@ -20,26 +17,45 @@ main {
   gap: 25px;
   width: fit-content;
   margin: 0px auto 50px auto;
+  font-size: 1.2rem;
   font-weight: 600;
+}
+
+.article-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 25px;
+  padding: 25px;
+  background-color: #fbf8f1;
+  text-align: center;
+  border: 3px solid black;
+  border-radius: 10px;
+  filter: drop-shadow(10px 7px 5px rgba(0, 0, 0, 0.233));
+  text-transform: none;
+  margin: 10px 0;
 }
 
 .article-card {
   padding: 10px;
-  background-color: lightgrey;
-  margin: 25px auto;
-  border: 5px solid black;
-  border-radius: 50px;
+  background-color: #f7ecde;
+  text-align: center;
+  border: 3px solid black;
+  border-radius: 10px;
+  filter: drop-shadow(10px 7px 5px rgba(0, 0, 0, 0.233));
+  text-transform: none;
   width: fit-content;
 }
 
 .comment-card {
   padding: 10px;
-  background-color: lightgrey;
+  background-color: #f7ecde;
   margin: 25px auto;
   text-align: left;
-  border: 5px solid black;
+  border: 3px solid black;
   border-radius: 10px;
-  filter: drop-shadow(10px 10px 5px rgba(0, 0, 0, 0.233));
+  filter: drop-shadow(10px 7px 5px rgba(0, 0, 0, 0.233));
   text-transform: none;
   width: fit-content;
 }
@@ -49,10 +65,20 @@ a:active,
 a:visited {
   text-decoration: none;
   color: black;
+  transition-duration: 200ms;
 }
 
 a:hover {
+  font-size: 102%;
   color: rgb(99, 99, 99);
+}
+
+select {
+  background-color: #fbf8f1;
+  border: 3px solid black;
+  border-radius: 10px;
+  filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
+  padding-left: 3px;
 }
 
 ul {
@@ -64,6 +90,18 @@ li {
   text-transform: capitalize;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+h4 {
+  margin-top: 10px;
+}
+
 h1,
 h2,
 h3,
@@ -73,6 +111,28 @@ h6 {
   text-transform: capitalize;
 }
 
+label {
+  margin: 0px 10px;
+  font-weight: 600;
+}
+
+input {
+  background-color: #fbf8f1;
+  border: 3px solid black;
+  border-radius: 10px;
+  filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
+  padding: 2px 8px;
+}
+
+.postcomment-button-submit {
+  background-color: #e9dac1;
+  border: 3px solid black;
+  border-radius: 10px;
+  filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
+  padding: 2px 8px;
+  margin: 0px 10px;
+}
+
 .votes-form {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
@@ -80,17 +140,19 @@ h6 {
   width: fit-content;
   gap: 1rem;
   margin: auto;
+  justify-items: center;
 }
 
 .vote-button-increase,
 .vote-button-decrease {
-  background: black;
-  color: #dfdfdf;
+  background: #e9dac1;
+  color: #000000;
   padding: 10px 25px;
   border-radius: 100px;
   font-size: 1em;
   font-weight: 600;
-  border: 0px;
+  border: 3px solid black;
+  filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
   transition-duration: 200ms;
 }
 
@@ -101,16 +163,25 @@ h6 {
 }
 
 .vote-button-increase:disabled {
-  background: green;
+  color: white;
+  background: #54bab9;
 }
 
 .vote-button-decrease:disabled {
-  background: rgb(175, 0, 0);
+  color: white;
+  background: #c14445;
+}
+
+.single-article {
+  background-color: #fbf8f1;
+  padding: 25px;
+  border: 3px solid black;
+  border-radius: 25px;
 }
 
 .comment-button-delete {
-  background: red;
-  color: #ffffff;
+  background: #c14445;
+  color: white;
   padding: 5px 15px;
   border: 3px solid black;
   font-size: 1em;
@@ -120,8 +191,12 @@ h6 {
 }
 
 .comment-button-delete:hover {
-  background-color: rgb(199, 0, 0);
+  background-color: #c14445;
   transform: scale(1.05);
+}
+
+.comment-button-delete:disabled {
+  opacity: 0.4;
 }
 
 .hide {
