--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@ header {
   grid-auto-flow: column;
 }
 
+b {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
 .navigation-list-topics {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
@@ -148,7 +153,7 @@ input {
   color: #000000;
   padding: 10px 25px;
   border-radius: 100px;
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: 600;
   border: 3px solid black;
   filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
