--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,23 @@
 body {
   font-family: 'roboto', sans-serif;
   text-align: center;
-  background-color: #f7ecde;
+  background-color: #2c394b;
+  color: white;
 }
 
 header {
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
   grid-auto-flow: column;
+}
+
+.header-image-avatar {
+  border-radius: 500px;
+  object-fit: cover;
+}
+
+.header-section-loggeduser h3 {
+  margin: 5px;
 }
 
 b {
@@ -28,55 +38,42 @@ b {
   font-weight: 600;
 }
 
-.article-list {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-evenly;
-  gap: 25px;
-  padding: 25px;
-  background-color: #fbf8f1;
-  text-align: center;
-  border: 3px solid black;
-  border-radius: 10px;
-  text-transform: none;
-  margin: 10px 0;
-}
-
 .article-card {
-  padding: 10px;
-  background-color: #f7ecde;
-  text-align: center;
   border: 3px solid black;
-  border-radius: 10px;
-  filter: drop-shadow(10px 7px 5px rgba(0, 0, 0, 0.233));
+  border-radius: 5px;
+  padding: 5px;
+  background-color: #082032;
+  text-align: center;
+  filter: drop-shadow(5px 2px 4px rgba(0, 0, 0, 0.233));
   text-transform: none;
-  width: fit-content;
+  width: 95%;
+  margin: 25px auto;
 }
 
 .comment-card {
   padding: 10px;
-  background-color: #f7ecde;
-  margin: 25px auto;
+  margin: 0px auto;
   text-align: left;
-  border: 3px solid black;
-  border-radius: 10px;
-  filter: drop-shadow(10px 7px 5px rgba(0, 0, 0, 0.233));
   text-transform: none;
-  width: fit-content;
+  width: 90%;
+}
+
+.comment-card p,
+h5 {
+  margin: 0;
+  padding: 0;
 }
 
 a,
 a:active,
 a:visited {
   text-decoration: none;
-  color: black;
+  color: #ff4c29;
   transition-duration: 200ms;
 }
 
 a:hover {
-  font-size: 102%;
-  color: rgb(99, 99, 99);
+  opacity: 60%;
 }
 
 select {
@@ -97,7 +94,7 @@ li {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 
 h3 {
@@ -125,7 +122,7 @@ label {
 textarea {
   font-family: 'roboto', sans-serif;
   font-size: 1rem;
-  background-color: #fbf8f1;
+  background-color: #ffffff;
   border: 3px solid black;
   border-radius: 10px;
   filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
@@ -136,7 +133,8 @@ textarea {
 
 .postcomment-button-submit {
   font-weight: 600;
-  background-color: #e9dac1;
+  color: white;
+  background-color: #2c394b;
   border: 3px solid black;
   border-radius: 15px;
   filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
@@ -147,7 +145,6 @@ textarea {
 
 .postcomment-button-submit:hover {
   cursor: pointer;
-  transform: scale(1.05);
 }
 
 .votes-form {
@@ -162,35 +159,33 @@ textarea {
 
 .vote-button-increase,
 .vote-button-decrease {
-  background: #e9dac1;
-  color: #000000;
-  padding: 10px 25px;
-  border-radius: 100px;
-  font-size: 1.2em;
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  font-size: 2em;
   font-weight: 600;
-  border: 3px solid black;
-  filter: drop-shadow(5px 2px 5px rgba(0, 0, 0, 0.233));
   transition-duration: 200ms;
 }
 
 .vote-button-increase:hover,
 .vote-button-decrease:hover {
   cursor: pointer;
-  transform: scale(1.05);
 }
 
 .vote-button-increase:disabled {
-  color: white;
-  background: #54bab9;
+  filter: drop-shadow(0px 0px 10px #00ff00);
 }
 
 .vote-button-decrease:disabled {
-  color: white;
-  background: #c14445;
+  filter: drop-shadow(0px 0px 10px #ff0000);
 }
 
 .single-article {
-  background-color: #fbf8f1;
+  background-color: #082032;
   padding: 25px;
   border: 3px solid black;
   border-radius: 25px;
@@ -208,9 +203,8 @@ textarea {
 }
 
 .comment-button-delete:hover {
-  background-color: #c14445;
+  opacity: 80%;
   cursor: pointer;
-  transform: scale(1.05);
 }
 
 .comment-button-delete:disabled {
